--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,8 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+  
+# Readership
+- skill: Readership
+  description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
